<package>
  <name>pcl_catkin</name>
  <version>0.0.0</version>
  <description>pcl_catkin</description>
  <maintainer email="titus.cieslewski@mavt.ethz.ch">Titus Cieslewski</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
